--- a/package.json
+++ b/package.json
@@ -3,13 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.5.2",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0",
+    "jquery": "^3.6.0",
+    "material-ui": "^0.20.2",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.8.3",
+    "react-modal": "^3.13.1",
+    "react-notifications": "^1.7.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
