--- a/package.json
+++ b/package.json
@@ -3,28 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@hookform/resolvers": "^2.5.2",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.0.4",
+    "@mui/styles": "^5.0.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
+    "date-fns": "^2.23.0",
     "jquery": "^3.6.0",
     "material-ui": "^0.20.2",
+    "material-ui-search-bar": "^1.0.0",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-bootstrap-validation": "^0.1.11",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.4.0",
+    "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.8.3",
     "react-modal": "^3.13.1",
     "react-notifications": "^1.7.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
+    "use-places-autocomplete": "^1.9.3",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
@@ -51,5 +65,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19"
   }
 }
